--- a/public/index.html
+++ b/public/index.html
@@ -2,89 +2,328 @@
 <html lang="en">
 <head>
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>WHERE THE TRUCK</title>
-	<meta name="author" content="David Siglin">
-	<meta name="description" content="A collection of landscape, portrait, and travel photography">
-	<meta name="keywords"  content="photography,photo,portrait,landscape,travel,lifestyle,picture,wedding,portraiture">
-	<meta name="Resource-type" content="Document">
-	<meta content="True" name="HandheldFriendly">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui, user-scalable=0">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-	<meta name="theme-color" content="#4c4c4c">
+	<meta name="viewport" content="user-scalable=no,">
 
+	<title>Where the Truck</title>
 	<link href="css/WTT.css" rel="stylesheet" />
-	<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Vollkorn:400italic' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Walter+Turncoat' rel='stylesheet' type='text/css'>
 	
 </head>
 <body>
 <body bgcolor="#34383d">
 
+<!-- INCREASE LOGO SIZE AND DYNAMICALLY SHRINK ON Y OFFSET-->
+<!--http://callmenick.com/post/animated-resizing-header-on-scroll-->
+<!--http://www.adobe.com/inspire/2013/09/exporting-svg-illustrator.html-->
+<!--http://www.smashingmagazine.com/2012/01/16/resolution-independence-with-svg/-->
+
 <header>
+<div class="headergraphic"></div>
+<div class="headerblue"></div>
 </header>
-	<div class="body_container">
-		<div class="truck_container">
-			<div class="truck_distance_container">
+
+<div class="topofpagespacer"></div>
+
+<div class="centeredtruckentries">
+	<div class="stateofthetrucktext">&#8212; ACTIVE TRUCKS &#8212;</div>
+	<div class="horizontalbordersbottom"></div>
+	
+	<!--Sally-->
+	<div class="truckentry">
+		<a href="javascript:;" onTouch="ReverseDisplay('extramenubar1').style.display='block';" class="menubuttoncontainer"></a>
+		<div class="trucknamecontainer">
+			<div class="truckname">sally&#39;s alley crawler
+				<div class="truckdescription">style: grease and grime</div>
 			</div>
-			<div class="truck_name">
-				AUTOMATIC TACO
+			
+		</div>
+			<div class="verticaldivider_container">
+			<div class="verticaldivider"></div>
 			</div>
-			<div class="truck_description">
-				A neue Southern taqueria
+		<a href="#" class="distancecontainer">
+			<div class="numericdistance">.75</div>
+			<br />
+			<div class="distanceunit">mi</div>
+		</a>
+	</div>
+	<!--divider-->	
+	<div class="horizontalborderstop"></div>
+	<!--divder-->
+		<div id="extramenubar1">
+			<div class="extramenubarbuttons extramenubartext">twitter</div>
+			<div class="extramenubardivider"></div>
+			<div class="extramenubarbuttons extramenubartext">call</div>
+			<div class="extramenubardivider"></div>
+			<div class="extramenubarbuttons extramenubartext">site</div>
+		</div>
+	<!--divider-->	
+	<div class="horizontalbordersbottom"></div>
+	<!--divder-->
+	
+	<!--Arthur-->
+	<div class="truckentry">
+		<a href="javascript:;" onClick="ReverseDisplay('extramenubar2').style.display='block';" class="menubuttoncontainer"></a>
+		<div class="trucknamecontainer">
+			<div class="truckname">arthur&#39;s round table
+				<div class="truckdescription">style: once and future meal</div>
 			</div>
-			<div class="truck_openclose_container">
-				<div class="truck_openclose_text">
-					OPEN
-				</div>
-				<div class="truck_tilltime_text">
-					till 2pm
-				</div>
+			
+		</div>
+			<div class="verticaldivider_container">
+			<div class="verticaldivider"></div>
 			</div>
-			<div class="truck_buttons_container">
-				<div class="truck_menubutton_container truck_menucallbutton_text">
-					MENU!
-				</div>
-				<div class="truck_callbutton_container truck_menucallbutton_text">
-					CALL!
-				</div>
-				<div class="truck_mapbutton_container truck_mapbutton_text">
-					MAP!
-				</div>
+		<a href="#" class="distancecontainer">
+			<div class="numericdistance">1.75</div>
+			<br />
+			<div class="distanceunit">mi</div>
+		</a>
+	</div>
+	<!--divider-->	
+	<div class="horizontalborderstop"></div>
+	<!--divder-->
+		<div id="extramenubar2">
+			<div class="extramenubarbuttons extramenubartext">facebook</div>
+			<div class="extramenubardivider"></div>
+			<div class="extramenubarbuttons extramenubartext">call</div>
+			<div class="extramenubardivider"></div>
+			<div class="extramenubarbuttons extramenubartext">site</div>
+		</div>
+	
+	<!--divider-->
+	<div class="horizontalbordersbottom"></div>
+	<!--divder-->
+	
+	<!--Rick-->
+	<div class="truckentry">
+		<a href="javascript:;" onClick="ReverseDisplay('extramenubar3').style.display='block';" class="menubuttoncontainer"></a>
+		<div class="trucknamecontainer">
+			<div class="truckname">rick&#39;s roadside roadkill
+				<div class="truckdescription">style: asphalt</div>
 			</div>
+			
+		</div>
+		<div class="verticaldivider_container">
+			<div class="verticaldivider"></div>
+		</div>
+		<a href="#" class="distancecontainer">
+			<div class="numericdistance">2.5</div>
+			<br />
+			<div class="distanceunit">mi</div>
+		</a>
+	</div>
+	<!--divider-->	
+	<div class="horizontalborderstop"></div>
+	<!--divder-->
+		<div id="extramenubar3">
+			<div class="extramenubarbuttons extramenubartext">facebook</div>
+			<div class="extramenubardivider"></div>
+			<div class="extramenubarbuttons extramenubartext">call</div>
+			<div class="extramenubardivider"></div>
+			<div class="extramenubarbuttons extramenubartext">site</div>
+		</div>
+	
+	<!--divider-->	
+	<div class="horizontalbordersbottom"></div>
+	<!--divder-->
+	
+	<!--Juanita-->
+	<div class="truckentry">
+		<a href="javascript:;" onClick="document.getElementById('extramenubar4').style.display='block';" class="menubuttoncontainer"></a>
+		<div class="trucknamecontainer">
+			<div class="truckname">juanita burrito bar
+				<div class="truckdescription">style: rolly polly burritos</div>
+			</div>
+			
+		</div>
+		<div class="verticaldivider_container">
+			<div class="verticaldivider"></div>
+			</div>
+		<a href="#" class="distancecontainer">
+			<div class="numericdistance">3</div>
+			<br />
+			<div class="distanceunit">mi</div>
+		</a>
+	</div>
+	<!--divider-->	
+	<div class="horizontalborderstop"></div>
+	<!--divder-->
+		<div id="extramenubar4">
+			<div class="extramenubarbuttons extramenubartext">instagram</div>
+			<div class="extramenubardivider"></div>
+			<div class="extramenubarbuttons extramenubartext">call</div>
+			<div class="extramenubardivider"></div>
+			<div class="extramenubarbuttons extramenubartext">site</div>
+		</div>
+		
+	<!--divider-->	
+	<div class="horizontalbordersbottom"></div>
+	<!--divder-->
+	
+	<div class="truckentry">
+		<a href="javascript:;" onClick="document.getElementById('extramenubar5').style.display='block';" class="menubuttoncontainer"></a>
+		<div class="trucknamecontainer">
+			<div class="truckname">rick&#39;s mobile roadkill
+				<div class="truckdescription">style: asphalt</div>
+			</div>
+			
+		</div>
+		<div class="verticaldivider_container">
+			<div class="verticaldivider"></div>
+			</div>
+		<a href="#" class="distancecontainer">
+			<div class="numericdistance">4.75</div>
+			<br />
+			<div class="distanceunit">mi</div>
+		</a>
+	</div>
+	<!--divider-->	
+	<div class="horizontalborderstop"></div>
+	<!--divder-->
+		<div id="extramenubar5">
+			<div class="extramenubarbuttons extramenubartext">twitter</div>
+			<div class="extramenubardivider"></div>
+			<div class="extramenubarbuttons extramenubartext">call</div>
+			<div class="extramenubardivider"></div>
+			<div class="extramenubarbuttons extramenubartext">site</div>
 		</div>
 
-		<div class="truck_container">
-			<div class="truck_distance_container">
+	<!--divider-->	
+	<div class="horizontalbordersbottom"></div>
+	<!--divder-->
+
+	<div class="truckentry">
+		<a href="javascript:;" onClick="document.getElementById('extramenubar6').style.display='block';" class="menubuttoncontainer"></a>
+		<div class="trucknamecontainer">
+			<div class="truckname">marvelous mandy&#39;s mutton
+				<div class="truckdescription">style: mmmmmmmm</div>
 			</div>
-			<div class="truck_name">
-				AUTOMATIC TACO
+			
+		</div>
+		<div class="verticaldivider_container">
+			<div class="verticaldivider"></div>
 			</div>
-			<div class="truck_description">
-				A neue Southern taqueria
+		<a href="#" class="distancecontainer">
+			<div class="numericdistance">5.75</div>
+			<br />
+			<div class="distanceunit">mi</div>
+		</a>
+	</div>
+	<!--divider-->	
+	<div class="horizontalborderstop"></div>
+	<!--divder-->
+		<div id="extramenubar6">
+			<div class="extramenubarbuttons extramenubartext">instagram</div>
+			<div class="extramenubardivider"></div>
+			<div class="extramenubarbuttons extramenubartext">call</div>
+			<div class="extramenubardivider"></div>
+			<div class="extramenubarbuttons extramenubartext">site</div>
+		</div>
+		
+	<!--divider-->	
+	<div class="horizontalbordersbottom"></div>
+	<!--divder-->
+
+
+	<div class="truckentry">
+		<a href="javascript:;" onClick="document.getElementById('extramenubar7').style.display='block';" class="menubuttoncontainer"></a>
+		<div class="trucknamecontainer">
+			<div class="truckname">rick roll&#39;s <BR ...> rolls
+				<div class="truckdescription">style: never gonna give them up</div>
 			</div>
-			<div class="truck_openclose_container">
-				<div class="truck_openclose_text">
-					OPEN
-				</div>
-				<div class="truck_tilltime_text">
-					till 2pm
-				</div>
+			
+		</div>
+		<div class="verticaldivider_container">
+			<div class="verticaldivider"></div>
 			</div>
-			<div class="truck_buttons_container">
-				<div class="truck_menubutton_container truck_menucallbutton_text">
-					MENU!
-				</div>
-				<div class="truck_callbutton_container truck_menucallbutton_text">
-					CALL!
-				</div>
-				<div class="truck_mapbutton_container truck_mapbutton_text">
-					MAP!
-				</div>
+		<a href="#" class="distancecontainer">
+			<div class="numericdistance">10.75</div>
+			<br />
+			<div class="distanceunit">mi</div>
+		</a>
+	</div>
+	<!--divider-->	
+	<div class="horizontalborderstop"></div>
+	<!--divder-->
+		<div id="extramenubar7">
+			<div class="extramenubarbuttons extramenubartext">facebook</div>
+			<div class="extramenubardivider"></div>
+			<div class="extramenubarbuttons extramenubartext">call</div>
+			<div class="extramenubardivider"></div>
+			<div class="extramenubarbuttons extramenubartext">site</div>
+		</div>
+		
+	<!--divider-->	
+	<div class="horizontalbordersbottom"></div>
+	<!--divder-->
+	
+	<div class="stateofthetrucktext">&#8212; UPCOMING TRUCKS &#8212;</div>
+	
+	<div class="horizontalbordersbottom"></div>
+	<!--divder-->
+	<div class="truckentry">
+		<a href="javascript:;" onClick="ReverseDisplay('extramenubar8').style.display='block';" class="menubuttoncontainer"></a>
+		<div class="trucknamecontainer">
+			<div class="truckname_closed">Insert Name Here
+				<div class="truckdescription_closed">style: ___________</div>
 			</div>
+			
+		</div>
+		<div class="verticaldivider_container">
+			<div class="verticaldivider"></div>
+			</div>
+		<div class="distancecontainer_closed">
+			<div class="numericdistance_closed">5</div>
+			<br />
+			<div class="distanceunit_closed">hours<br/>to open</div>
 		</div>
 	</div>
-
-
+	
+	<!--divider-->	
+	<div class="horizontalborderstop"></div>
+	<!--divder-->
+		<div id="extramenubar8">
+			<div class="extramenubarbuttons extramenubartext">facebook</div>
+			<div class="extramenubardivider"></div>
+			<div class="extramenubarbuttons extramenubartext">call</div>
+			<div class="extramenubardivider"></div>
+			<div class="extramenubarbuttons extramenubartext">site</div>
+		</div>	
+	<!--divider-->	
+	<div class="horizontalbordersbottom"></div>
+	<!--divder-->
+	<div class="truckentry">
+		<a href="javascript:;" onClick="ReverseDisplay('extramenubar9').style.display='block';" class="menubuttoncontainer"></a>
+		<div class="trucknamecontainer">
+			<div class="truckname_closed">The Hen <BR ...>House
+				<div class="truckdescription_closed">style: come peckish</div>
+			</div>
+			
+		</div>
+		<div class="verticaldivider_container">
+			<div class="verticaldivider"></div>
+			</div>
+		<div class="distancecontainer_closed">
+			<div class="numericdistance_closed">24</div>
+			<br />
+			<div class="distanceunit_closed">hours<br/>to open</div>
+		</div>
+	</div>
+	
+	<!--divider-->	
+	<div class="horizontalborderstop"></div>
+	<!--divder-->
+	<div id="extramenubar9">
+			<div class="extramenubarbuttons extramenubartext">instagram</div>
+			<div class="extramenubardivider"></div>
+			<div class="extramenubarbuttons extramenubartext">call</div>
+			<div class="extramenubardivider"></div>
+			<div class="extramenubarbuttons extramenubartext">site</div>
+		</div>
+		
+	<!--divider-->	
+	<div class="horizontalbordersbottom"></div>
+	<!--divder-->
+	
 </body>
 </html>
