update CSS and HMTL

--- a/public/index.html
+++ b/public/index.html
@@ -24,17 +24,23 @@
 <header>
 </header>
 	<div class="body_container">
-		<div class="truck_container">
+		<div class="truck_open_maincontainer">
 			<div class="truck_distance_container">
+				<div class="truck_distance_text">
+					3.5
+					<span class="truck_miles_text">
+					mi
+					</span>
+				</div>
 			</div>
-			<div class="truck_name">
+			<div class="truck_name_text">
 				AUTOMATIC TACO
 			</div>
-			<div class="truck_description">
+			<div class="truck_description_text">
 				A neue Southern taqueria
 			</div>
-			<div class="truck_openclose_container">
-				<div class="truck_openclose_text">
+			<div class="truck_opensign_container">
+				<div class="truck_opensign_text">
 					OPEN
 				</div>
 				<div class="truck_tilltime_text">
@@ -42,49 +48,70 @@
 				</div>
 			</div>
 			<div class="truck_buttons_container">
-				<div class="truck_menubutton_container truck_menucallbutton_text">
+				<a href="#" class="truck_menubutton_container truck_menucallbutton_text"> 
 					MENU!
-				</div>
-				<div class="truck_callbutton_container truck_menucallbutton_text">
+				</a>
+				<a href="#" class="truck_callbutton_container truck_menucallbutton_text">
 					CALL!
-				</div>
-				<div class="truck_mapbutton_container truck_mapbutton_text">
+				</a>
+				<a href="#" class="truck_mapbutton_container truck_mapbutton_text">
 					MAP!
-				</div>
+				</a>
 			</div>
 		</div>
 
-		<div class="truck_container">
+		<div class="truck_open_maincontainer">
 			<div class="truck_distance_container">
+				<div class="truck_distance_text">
+					3.5
+					<span class="truck_miles_text">
+					mi
+					</span>
+				</div>
 			</div>
-			<div class="truck_name">
+			<div class="truck_name_text">
 				AUTOMATIC TACO
 			</div>
-			<div class="truck_description">
+			<div class="truck_description_text">
 				A neue Southern taqueria
 			</div>
-			<div class="truck_openclose_container">
-				<div class="truck_openclose_text">
+			<div class="truck_opensign_container">
+				<div class="truck_opensign_text">
 					OPEN
 				</div>
 				<div class="truck_tilltime_text">
-					till 2pm
+					till 2pm 
 				</div>
 			</div>
 			<div class="truck_buttons_container">
-				<div class="truck_menubutton_container truck_menucallbutton_text">
+				<a href="#" class="truck_menubutton_container truck_menucallbutton_text"> 
 					MENU!
-				</div>
-				<div class="truck_callbutton_container truck_menucallbutton_text">
+				</a>
+				<a href="#" class="truck_callbutton_container truck_menucallbutton_text">
 					CALL!
-				</div>
-				<div class="truck_mapbutton_container truck_mapbutton_text">
+				</a>
+				<a href="#" class="truck_mapbutton_container truck_mapbutton_text">
 					MAP!
+				</a>
+			</div>
+		</div>
+
+		<div class="truck_closed_maincontainer">
+			<div class="truck_name_text">
+				AUTOMATIC TACO
+			</div>
+			<div class="truck_description_text">
+				A neue Southern taqueria
+			</div>
+			<div class="truck_closedsign_container">
+				<div class="truck_closedsign_text">
+					CLOSED
+				</div>
+				<div class="truck_tilltime_text">
+					till 2pm 2/3/16
 				</div>
 			</div>
 		</div>
-	</div>
-
 
 </body>
 </html>
